# smartscp

./: Cargo.toml  Readme.md
src/: download.rs  error.rs  main.rs  upload.rs  upload_only_dot_git.rs
