[package]
name = "smartscp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathdiff = "0.2.1"
ssh2-config = "0.2.2"
shellexpand = "3.1"
users = "0.11"
openssh-sftp-client = {version = "0.13.10", features=["openssh"]}
openssh = {version = "0.9.9", features = ["native-mux"]}
bytes = "1.4.0"
tokio = {version = "1.32.0", features=["full"]}
futures = "0.3.28"
async-recursion = "1.0.5"
rlimit = "0.10.1"
git2 = "0.18.1"
walkdir = "2.4.0"
