[package]
name = "smartscp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathdiff = "0.2.1"
ssh2-config = "0.2.2"
shellexpand = "3.1"
anyhow = "1.0.75"
xcp = {git = "https://github.com/lengyijun/xcp", branch = "library"}
tempfile = "3.9.0"
crossbeam-channel = "0.5.11"
log = "0.4.20"
